themes/inbeat/assets/scss/pages/_mockup-builders.scss
/* ... */
#mockup__card-wrapper{
    // height: 829px;
    overflow: hidden;
    position: relative;
    border: 1px solid #DCDCDC;
    box-shadow: 0px 4px 11px rgba(0, 0, 0, 0.1);
    border-radius: 1px;
    margin-bottom: 128px;
    @include breakpoint(sm-down) {
        margin-top: 1rem;
        padding: 1.5rem 1rem 1.5rem 1rem;

      }
      .mockup__title{
        font-weight: 500;
        font-size: 16px;
        line-height: 24px;
        letter-spacing: -0.5px;
        color: #000000;
        margin: 0;
      }
      .mockup__description{
        font-weight: 400;
        font-size: 12px;
        line-height: 24px;
        letter-spacing: -0.3px;
        color: #BBBBBB;
        margin: 0;
        display: block;
      }
      .mockup__preview-configuration-wrapper{
        // gap: 64px;
        // margin-top: 24px;
     
        .col-md-6 {
          flex: 1 1 0 !important;
        }
        .mockup__configuration-section{
          padding-right: 3rem;
          // border-right: 1px solid rgba(0, 0, 0, 0.1);
          // height: 780px;
          overflow-y: hidden;
          @include breakpoint(sm-down) {
            padding-left: 0;
            padding-right: 0;
            height: auto;
        }
          &:hover {
            overflow-y: overlay;
          }
          &::-webkit-scrollbar {
            width: 2px;
          }
          &::-webkit-scrollbar-track {
            background-color: rgba(0, 0, 0, 0.05);
            // background: #008080;
          }
          &::-webkit-scrollbar-thumb {
            background: #cacaca;
          }
          .mockup__configuration-header-wrapper{
            display: flex;
            align-items: flex-end;
            justify-content: space-between;
            .mockup__configuration-title{
              font-weight: 500;
              font-size: 30px;
              line-height: 40px;
              letter-spacing: -0.3px;
              color: #141514;
              margin: 0;
            }
            .mockup__configuration-description{
              font-weight: 400;
              font-size: 16px;
              line-height: 26px;
              color: #BBBBBB;
              margin: 0;
            }
          }
        
        }
      }

}
.mockup-controls{
    margin-top: 62px;
    display: flex;
    gap: 22px;
    .control-dropdown-trigger{
        display: flex;
        align-items: center;
        justify-content: space-between;
        gap: 28px;
        border: 1px solid #535562;
        border-radius: 6px;
        padding: 6px 20px;
        cursor: pointer;
    }
}
.mockup-btn{
  color: #FFFFFF;
  background: #000000;
  border-radius: 4px;
  display: flex;
  align-items: center;
  padding: 6px 12px;
  gap: 10px;
  border: none;
  font-weight: 500;
  font-size: 16px;
  line-height: 38px;
  letter-spacing: -0.596318px;
  height: fit-content;
  cursor: pointer;
}
.label{
  font-weight: 600;
  font-size: 16px;
  line-height: 26px;
  letter-spacing: 0.3px;
  color: #535562;
  display: block;
}
.profile__input-wrapper{
  display: flex;
  flex-direction: column;
  margin-top: 32px;
  .uploader-wrapper{
    display: flex;
    gap: 8px;
    margin-top: 8px;
  }
} 
.mockup-input{
  border: 1px solid #BBBBBB;
  border-radius: 4px;
  padding: 12px 14px;
  font-size: 16px;
  line-height: 26px;
  letter-spacing: 0.3px;
  width: -webkit-fill-available;
  transition: all 0.5s ease;
  color: #262626;
  font-size: 0.952rem;
  &:focus{
    border-color: #000000;
    outline: none;
  }
}
.input-wrapper{
  flex: 1 1 auto;
}
.upload_profile-picture-btn{
  padding: 12px 24px;
}
.mockup__configuration-dropzone-wrapper{
  margin-top: 24px;
  font-weight: 600;
  font-size: 16px;
  line-height: 26px;
  letter-spacing: 0.3px;
  color: #535562;
  .mockup__description{
    margin-bottom: 8px !important;
  }
}
.mockup__file-uploader {
  cursor: pointer;
  input[type='file'] {
    height: 0.1px;
    opacity: 0;
    overflow: hidden;
    position: absolute;
    z-index: -1;
    width: 0.1px;
  }

  .file--upload__draggable {
    cursor: pointer;
    padding: 0.25em;

    border: 1px dashed #BBBBBB;
    border-radius: 4px;    
    display: flex;
    align-items: center;
    justify-content: center;
  }

  &.mockup-drag-enter {
    background-color: rgba(177, 176, 176, 0.486);

    // to prevent dragleave event triggered while user dragging over child items
    .file--upload__draggable::before {
      content: '';
      position: absolute;
      top: 0;
      bottom: 0;
      width: 100%;
      height: 100%;
      z-index: 9999999;
    }
  }
}

.mockup-dropdown{
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 28px;
  border: 1px solid #BBBBBB;
  border-radius: 4px;
  padding: 12px 14px;
  cursor: pointer;
  width: 100%;
  position: relative;
  transition: all 0.5s ease;
  &:focus{
    border-color: #000000;
  }
  a{
      // font-weight: 500;
      font-size: 16px;
      line-height: 26px;  
      display: flex;
      align-items: center;
  }
}
/* ... */

